# LLaVA-3D

./: README.md  inference.sh  pyproject.toml
docs/: fintune_custom_data.md
llava/: constants.py  conversation.py  mm_utils.py
llava/eval/: model_mmscan_qa.py  model_openeqa.py  model_scan2cap.py  model_sqa3d.py  run_llava.py  run_llava_3d.py  scanqa_evaluator.py  sqa3d_evaluator.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py  position_encodings.py  spatial_aware_module.py  unproject.py  video_encoder.py  video_processor.py
llava/train/: train.py
scripts/eval/: eval_multiprocess_mmscan_qa.sh  mmscan_obj_captioning.sh  mmscan_qa.sh  openeqa.sh  scan2cap.sh  scanqa.sh  sqa3d.sh
scripts/train/: finetune.sh  pretrain.sh
